dark mode, hidration logoempresa Fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,19 +87,19 @@
   .btn-primary {
     @apply bg-purple-700 text-white py-3 px-8 rounded-md font-medium hover:bg-purple-800 transition;
   }
-
   .nav-link {
     position: relative;
     color: #333;
     font-weight: 500;
     padding: 0.5rem 0.75rem;
     transition: all 0.2s ease;
+    .dark & {
+      color: #e9e9e9;
+    }
   }
-
   .nav-link:hover {
     color: #0070f3;
   }
-
   .nav-link::after {
     content: "";
     position: absolute;
@@ -111,27 +111,22 @@
     transition: all 0.3s ease;
     transform: translateX(-50%);
   }
-
   .nav-link:hover::after {
     width: 70%;
   }
-
   .submenu-dropdown {
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -1px rgba(0, 0, 0, 0.06);
     border-radius: 0.375rem;
     border: 1px solid #f3f4f6;
   }
-
   .submenu-item {
     transition: background-color 0.2s ease;
   }
-
   .submenu-item:first-child {
     border-top-left-radius: 0.375rem;
     border-top-right-radius: 0.375rem;
   }
-
   .submenu-item:last-child {
     border-bottom-left-radius: 0.375rem;
     border-bottom-right-radius: 0.375rem;
